--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   profiles:
     include: local
+  # spring.batch.job.name을 사용하면 여러 개의 job 중에 특정 job만 실행할 수 있다.
+  batch:
+    job:
+      name: stepNextConditionalJob
 
 ---
 spring:
